--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
 </head>
 <body>
     <main class="container">
-        <h1 class="title">Cadastro</h1>
-        <div class="row">
-            <div class="inputbox">
-                <input type="text" id="nome" required>
-                <label for="nome">Nome</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="email"  required>
-                <label for="email">Email</label>
-            </div>
-        </div>
+        <h1 class="title">Busca por Cedo</h1>
+       
         <div class="row">
             <div class="inputbox">
                 <input type="text" id="cep"  required>
